2001-02-14  Robey Pointer  <robey@eazel.com>

	reviewed by: Eskil Heyn Olsen  <eskil@eazel.com>

	* components/services/install/lib/eazel-install-xml-package-list.c:
	(osd_parse_shared), (eazel_install_packagelist_parse):
	* components/services/install/lib/eazel-install-xml-package-list.h:
	* components/services/install/lib/eazel-softcat-private.h:
	* components/services/install/lib/eazel-softcat.c:
	(eazel_softcat_finalize), (eazel_softcat_initialize),
	(eazel_softcat_reset_server_update_flag), (eazel_softcat_query):

	Return the softcat DB revision with the parsed package list, and
	use that info to hook into Eskil's error trap.  Also free up the
	softcat private data when the object goes away.

2001-02-14  Gene Z. Ragan  <gzr@eazel.com>

	Fixed bug 6653, throwing away something with the desktop not on will
	bring up an empty trash if the desktop is later turned on
	
	* src/file-manager/fm-desktop-icon-view.c:
	(update_trash_link_and_delete_copies):
	Preflight state of trash icon when we are doing all of the other
	icon state validity checks.

2001-02-14  Andy Hertzfeld  <andy@eazel.com>

	* libnautilus-extensions/nautilus-icon-factory.c:
	(is_supported_mime_type),
	(nautilus_icon_factory_get_icon_for_file):
	fixed bug 6623, .fig files cause warnings to spew, by checking for
	types that we don't support and excluding them from thumbnailing.
	
2001-02-14 John Fleck <jfleck@inkstain.net>

	reviewed by: Ali Abdin <aliabdin@aucegypt.edu>
	* components/help/converters/gnome-db2html2/toc-elements.c
	fix bug # 6551 - add test to see if article header has already
	been printed and don't print it a second time

2001-02-14  Rebecca Schulman  <rebecka@eazel.com>
	Fix bugzilla.eazel.com bug 6416, that the search results view
	needs to inform the user if indexing is disabled or blocked
	on their system.  I haven't added the final text yet, since
	it is not complete.  The final text will be swapped in.

	reviewed by: Maciej Stachowiak <mjs@eazel.com>
