@@ -1,3 +1,10 @@
+2001-02-14  Mike Fleming  <mfleming@eazel.com>
+
+	* components/mozilla/mozilla-preferences.cpp:
+
+	Bug 6592 -- Embedded Mozilla defaults to port 8080 when HTTP
+	proxy is enabled like everything else
+
 2001-02-14  Robey Pointer  <robey@eazel.com>
 
 	reviewed by: Eskil Heyn Olsen  <eskil@eazel.com>
